<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dialog_width"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:background="@drawable/dialog_background"
    android:elevation="@dimen/margin"
    android:padding="@dimen/margin">

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_3"
        android:layout_marginTop="@dimen/margin_2"
        android:text="@string/lights"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.DialogWindowTitle" />

    <TextView
        android:id="@+id/textFrontLeds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textTitle"
        android:layout_marginStart="@dimen/margin_3"
        android:layout_marginTop="@dimen/margin_3"
        android:text="@string/led_front"
        android:textColor="@color/gray" />

    <TextView
        android:id="@+id/textPercent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textTitle"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/margin_3"
        android:layout_toEndOf="@+id/textFrontLeds"
        android:text="@string/maximum_level" />

    <SeekBar
        android:id="@+id/seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textPercent"
        android:max="1023"
        android:progress="1023"
        android:progressTint="@color/main"
        android:thumbTint="@color/main" />

    <Button
        android:id="@+id/buttonPositive"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekbar"
        android:layout_alignParentEnd="true"
        android:background="@drawable/button_transparent"
        android:text="@android:string/ok" />
</RelativeLayout>